fix header z-index

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -31,6 +31,7 @@ $app-card-padding: 1.5rem;
   padding-right: 3.2rem;
   background: transparent 0% 0% no-repeat padding-box;
   border-bottom: 1px solid #ffffff10;
+  z-index: 1;
 }
 
 .App-header.large::after {
@@ -49,6 +50,7 @@ $app-card-padding: 1.5rem;
 
 .App-header.small {
   display: none;
+  z-index: 1;
 }
 
 .App-header-link-home {
